@@ -5,7 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
-
+  - 13-04-2005 fixed: ff/rw/play buttons on remote didn't work in fullscreen
+  - 13-04-2005 added: Support to toggle new time/progbar display in fullscreen (default mapped to white button)
   - 12-04-2005 added: navigation sounds
   - 11-04-2005 fixed: FullscreenVideo wasn't rescaled correctly to PAL60.
   - 11-04-2005 changed: GUIInfoManager if/else blocks to switch (faster)
